
	* If more than one of "../man", "man", "../share/man", and
	  "share/man" exist relative to a directory on $PATH, then all of
	  them are now added to the automatically-determined manpath;
	  previously, only the first was considered.

	* Remove arbitrary limit on manpath size.

	* The systemd database maintenance service now runs mandb with the
	  --quiet option, avoiding excess log messages.

man-db 2.8.5 (5 January 2019)
=============================

Major changes since man-db 2.8.4:

	Building man-db now requires Autoconf >= 2.63 and Automake >=
	1.11.2.

	Fixes:
	------

	* Fix build with Berkeley DB.

	* Fail to configure if flex is needed but missing.

	* Fix the comment in the first line of the configuration file in the
	  case where configure was not given a --with-config-file option.

	* Fix several resource and memory leaks.

	* Fix handling of \- in the right-hand side of a NAME section.

	* Work around Microsoft's proprietary "System Center Endpoint
	  Protection" antivirus program in the seccomp sandbox.

	Improvements:
	-------------

	* Ship a systemd timer to perform daily database maintenance.

	* Allow disabling the installation of the systemd tmpfiles snippet
	  and the systemd timer by configuring with
	  --with-systemdtmpfilesdir=no and --with-systemdsystemunitdir=no
	  respectively.

man-db 2.8.4 (27 July 2018)
===========================

Major changes since man-db 2.8.3:

	Fixes:
	------

	* Rely on decompressors reading from their standard input rather
	  than redundantly passing them the input file on their command
	  line.  This works better with downstream AppArmor confinement of
	  decompressors.

	* Fix invalid syntax in tmpfiles.d/man-db.conf when configured with
	  --disable-cache-owner.

	* Make seccomp sandbox allow sched_getaffinity, sometimes used by
	  xz.

	* Check for mandb_nfmt and mandb_tfmt in the manual page hierarchy
	  as documented, not in the current directory.  This was broken by