@@ -16,6 +16,9 @@ Major changes since man-db 2.8.5:
 	* The systemd database maintenance service now runs mandb with the
 	  --quiet option, avoiding excess log messages.
 
+	* Default to --without-systemdsystemunitdir and
+	  --without-systemdtmpfilesdir on non-Linux systems.
+
 man-db 2.8.5 (5 January 2019)
 =============================
 
